# spark-ml-template

./: Makefile  pyproject.toml
.devcontainer/: devcontainer.json  dockerfile
src/data/: explain.py  get_data.py
src/models/: train_model.py
src/scratch/: construct_query.py
