[tool.poetry]
name = "spark-project-template"
version = "0.1.0"
description = ""
authors = ["jimmfan <jimmfan@github.com>"]
readme = "README.md"
packages = [{include = "src"}]

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.dependencies]
python = "~3.10"
pyspark = "^3.5.0"
numpy = "^1.26.2"
pyyaml = "^6.0.1"

[tool.poetry.group.dev.dependencies]

[tool.isort]
profile = "black"

[tool.pytest.ini_options]
minversion = "6.0"
addopts = "-ra -q"
testpaths = [
    "tests",
]